Migrate project from random tile bag to card deck implementation
- Replaced TileBag with CardDeck to focus on simulating card deck mechanics.
- Removed `random_tile_bag` module and associated tests.
- Added `card_deck` module with new CardDeck implementation.
- Created unit tests for CardDeck to ensure full coverage.
- Updated project name in `pyproject.toml` to "random-card-draw".
- Integrated IDE configuration files for development environment setup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "random-tile-bag"
+name = "random-card-draw"
 version = "0.1.0"
-description = "A program for testing board game mechanics by simulating drawing a random tile from a bag."
+description = "A program for testing board game mechanics by simulating various card draws"
 authors = [
     {name = "John Harger"}
 ]
