Add multi-deck support and event-driven card functionality
- Introduced `DeckManager` class to handle multiple decks and card interactions.
- Added `event_deck.json` with event-specific cards and descriptions.
- Enhanced `Card` class to include optional properties for drawing related cards from other decks.
- Updated `main.py` for interactive multi-deck operations with event triggers.
- Created `test_multi_deck_functionality.py` to validate new features.
- Refined `pyproject.toml` with pytest configuration for structured testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,16 @@ exclude = [
     ".pytest_cache"
 ]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short"
+]
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
